# interactive_linear_algebra

./: .gitignore  README.md  conftest.py  pyproject.toml
src/example_lib/: calculate.py
src/linalg/: row_reduction.py
tests/: test_row_reduction.py
