[project]
name = "linalg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nick Horton", email = "nickkbhorton@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.2",
]

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
extend-select = ["E501"]
